fix bag with centering footer__nav

--- a/index.html
+++ b/index.html
@@ -344,21 +344,23 @@
 				<li class="icons__item"><a class="icons__link _icon-instagram" href="https://www.instagram.com/"
 						target="_blank"></a></li>
 			</ul>
-			<div class="footer__nav">
-				<div class="footer__border"></div>
-				<ul class="footer__menu">
-					<li class="footer__item"><a href="#" class="footer__link">На главную</a></li>
-					<li class="footer__item"><a href="#" class="footer__link">Города</a></li>
-					<li class="footer__item"><a href="#" class="footer__link">Для водителей</a></li>
-				</ul>
-				<ul class="support">
-					<li class="support__item"><a href="#" class="support__link">Центр поддержки</a></li>
-					<li class="support__item"><a href="#" class="support__link">Вакансии</a></li>
-					<li class="support__item"><a href="#" class="support__link">Разработчики</a></li>
-					<li class="support__item"><a href="#" class="support__link">Блог</a></li>
-					<li class="support__item"><a href="#" class="support__link">О нас</a></li>
-				</ul>
-				<div class="language">Русский</div>
+			<div class="footer__box">
+				<div class="footer__nav">
+					<div class="footer__border"></div>
+					<ul class="footer__menu">
+						<li class="footer__item"><a href="#" class="footer__link">На главную</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Города</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Для водителей</a></li>
+					</ul>
+					<ul class="support">
+						<li class="support__item"><a href="#" class="support__link">Центр поддержки</a></li>
+						<li class="support__item"><a href="#" class="support__link">Вакансии</a></li>
+						<li class="support__item"><a href="#" class="support__link">Разработчики</a></li>
+						<li class="support__item"><a href="#" class="support__link">Блог</a></li>
+						<li class="support__item"><a href="#" class="support__link">О нас</a></li>
+					</ul>
+					<div class="language">Русский</div>
+				</div>
 			</div>
 			<div class="footer__stores">
 				<img src="./img/storeapple.png" alt="Apple store">
