fix bug with section {terms}

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 				<nav class="menu__body">
 					<ul class="menu__list">
 						<li class="header__item"><a href="#" class="header__link">Главная</a></li>
-						<li class="header__item"><a href="#" class="header__link">Со своим автомобилем</a></li>
-						<li class="header__item"><a href="#" class="header__link">На автомобиле компании</a></li>
-						<li class="header__item"><a href="#" class="header__link">Требования</a></li>
+						<li class="header__item"><a href="#terms" class="header__link">Со своим автомобилем</a></li>
+						<li class="header__item"><a href="#terms" class="header__link">На автомобиле компании</a></li>
+						<li class="header__item"><a href="#terms" class="header__link">Требования</a></li>
 						<li class="header__item"><a href="#" class="header__link">Контакты</a></li>
 						<li class="header__item"><a href="#" class="header__link">Оставить заявку</a></li>
 					</ul>
@@ -268,7 +268,7 @@
 				<div class="terms__name name text-center">
 					<p>Возможности</p>
 				</div>
-				<div class="terms__title title text-center">Условия и требования</div>
+				<div class="terms__title title text-center" id="terms">Условия и требования</div>
 				<div class="terms__row">
 					<div class="list__body">
 						<div class="list__title list__title_green"><span>Условия</span>: со своим авто:</div>
@@ -288,7 +288,7 @@
 							В день заработок составляет 7000-12000р + бонус 3000т рублей
 						</div>
 					</div>
-					<div class="list__body mt-25">
+					<div class="list__body">
 						<div class="list__title list__title_green"><span>Условия</span>: на авто компании:</div>
 						<ul class="list__terms">
 							<li class="list__item list__item_green">Предоставляем авто без залога</li>
@@ -300,7 +300,7 @@
 				</div>
 				<div class="terms__row">
 					<div class="list__body">
-						<div class="list__title list__title_red"><span>Требования:</span></div>
+						<div class="list__title list__title_red" id="requirements"><span>Требования:</span></div>
 						<ul class="list__terms">
 							<li class="list__item list__item_red">Подключаем к системе UBER под 10%</li>
 							<li class="list__item list__item_red">Ни каких взносов 0%</li>
@@ -310,7 +310,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="list__body mt-25">
+					<div class="list__body">
 						<div class="list__title list__title_red"><span>Документы:</span></div>
 						<ul class="list__terms">
 							<li class="list__item list__item_red">Предоставляем авто без залога</li>
