work with contact: modal wimdow

--- a/index.html
+++ b/index.html
@@ -395,23 +395,11 @@
 		<div class="popup__body">
 			<div class="popup__content">
 				<a href="#header" class="popup__close close-popup">X</a>
-				<div class="popup__title">Это модальное окно №1</div>
+				<div class="popup__title">Наши контакты</div>
 				<div class="popup__text">
-					<a class="popup-link" href="#popup_2">Попап №2</a> ipsum dolor sit amet consectetur adipisicing elit. Aut
-					enim vero veritatis velit assumenda soluta sed ad, omnis alias placeat debitis voluptas ea ipsam dolorum
-					error dolorem, a blanditiis! Quidem!
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut enim vero veritatis velit assumenda soluta
-					sed ad, omnis alias placeat debitis voluptas ea ipsam dolorum error dolorem, a blanditiis! Quidem!
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut enim vero veritatis velit assumenda soluta
-					sed ad, omnis alias placeat debitis voluptas ea ipsam dolorum error dolorem, a blanditiis! Quidem!
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut enim vero veritatis velit assumenda soluta
-					sed ad, omnis alias placeat debitis voluptas ea ipsam dolorum error dolorem, a blanditiis! Quidem!
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut enim vero veritatis velit assumenda soluta
-					sed ad, omnis alias placeat debitis voluptas ea ipsam dolorum error dolorem, a blanditiis! Quidem!
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut enim vero veritatis velit assumenda soluta
-					sed ad, omnis alias placeat debitis voluptas ea ipsam dolorum error dolorem, a blanditiis! Quidem!
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut enim vero veritatis velit assumenda soluta
-					sed ad, omnis alias placeat debitis voluptas ea ipsam dolorum error dolorem, a blanditiis! Quidem!
+					<p>Наш адрес:</p>
+					<p>Республика Беларусь</p>
+					<p>г.Гродно, ул.Гая 4</p>
 				</div>
 			</div>
 		</div>
