add map in modal window:contacts

--- a/index.html
+++ b/index.html
@@ -396,10 +396,18 @@
 			<div class="popup__content">
 				<a href="#header" class="popup__close close-popup">X</a>
 				<div class="popup__title">Наши контакты</div>
-				<div class="popup__text">
-					<p>Наш адрес:</p>
-					<p>Республика Беларусь</p>
-					<p>г.Гродно, ул.Гая 4</p>
+				<div class="popup__local">
+					<div class="popup__text">
+						<p>Наш адрес:</p>
+						<p>Республика Беларусь</p>
+						<p>г.Гродно, ул.Гая 4</p>
+					</div>
+					<div class="popup__map">
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1182.0356290336097!2d23.83836765547269!3d53.66353053150489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dfd7ca3d3c06ff%3A0x80a41f2d9f86291d!2z0J7QktCUINCQ0LTQvNC40L3QuNGB0YLRgNCw0YbQuNC4INCe0LrRgtGP0LHRgNGM0YHQutC-0LPQviDQoNCw0LnQvtC90LAg0JPRgNC-0LTQvdC-!5e0!3m2!1sru!2sby!4v1653903587586!5m2!1sru!2sby"
+							width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"></iframe>
+					</div>
 				</div>
 			</div>
 		</div>
